# zephyr_scg_fork

drivers/counter/: CMakeLists.txt  Kconfig  Kconfig.mchp_xec  counter_mchp_xec_rtimer.c
drivers/dma/: Kconfig  Kconfig.mchp_xec  dma_mchp_xec.c
drivers/i2c/: CMakeLists.txt  Kconfig.mchp_xec  i2c_mchp_xec_v3_nl.c
drivers/timer/: CMakeLists.txt  Kconfig  Kconfig.mchp_xec  mchp_xec_cct_ktimer.c
dts/arm/microchip/mec/: mec5.dtsi
dts/arm/microchip/mec/mec5/: mec5_dma_chan16.dtsi  (+1 more)
dts/bindings/counter/: microchip,xec-rtimer-counter.yaml
dts/bindings/dma/: microchip,xec-dmac.yaml
dts/bindings/i2c/: microchip,xec-i2c-v3-nl-port.yaml  microchip,xec-i2c-v3-nl.yaml
dts/bindings/timer/: microchip,xec-cct-ktimer.yaml
include/zephyr/drivers/i2c/: mchp_xec_i2c.h
include/zephyr/dt-bindings/dma/: mchp-xec-dmac.h
include/zephyr/dt-bindings/i2c/: mchp-xec-i2c.h
samples/boards/microchip/mec_evb/i2c_v3_nl/targ_mode/: CMakeLists.txt  prj.conf  sample.yaml
samples/boards/microchip/mec_evb/i2c_v3_nl/targ_mode/boards/: mec_assy6941_mec1753_qlj.overlay
samples/boards/microchip/mec_evb/i2c_v3_nl/targ_mode/src/: main.c
samples/boards/microchip/xec_cct_kt/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/boards/microchip/xec_cct_kt_pm/: CMakeLists.txt  prj.conf  sample.yaml
soc/microchip/mec/: Kconfig
soc/microchip/mec/common/: soc_ecia.h  soc_pm_mgmt.c
soc/microchip/mec/mec165xb/: Kconfig  Kconfig.defconfig.series
soc/microchip/mec/mec174x/: Kconfig  Kconfig.defconfig.series
soc/microchip/mec/mec175x/: Kconfig  Kconfig.defconfig.series
(+14 files in other folders)
